# signal-engine

./: .gitignore  COMMANDS.md  README.md  main.py  pyproject.toml  requirements.txt
config/: rsi_bollinger_v2_profiles.json
profiles/: small_account_growth.json
scripts/: backtest_small_account_growth.py  backtest_small_account_scan.py  backtest_swing_options_debit_spread.py  backtest_swing_options_proxy.py  run_daily_workflow.py  sweep_rsi_bollinger_v2.py
src/algo_backtester/: backtester.py  cli.py  config.py  config_loader.py  data_loader.py  indicators.py  journal.py  market_regime.py  metrics.py  options_engine.py  options_signal_quality.py  options_utils.py  plotting.py  reporting.py  scanner.py  strategy.py  trade_plan.py  universe.py  watchlists.py
src/algo_backtester/backtests/: ema_rsi_backtester.py  four_hour_trend_backtester.py  options_momentum_backtester.py  rsi_bollinger_backtester.py  rsi_bollinger_v2_backtester.py  swing_options_backtester.py  swing_options_debit_spread_backtester.py  swing_options_proxy_backtester.py
tests/: test_backtester.py  test_daily_summary_report.py  test_ema_rsi_strategy.py  test_four_hour_trend_strategy.py  test_indicators.py  test_journal.py  test_options_momentum.py  test_plotting.py  test_rsi_bollinger_strategy.py  test_rsi_bollinger_v2_strategy.py  test_run_daily_workflow.py  test_small_account_growth.py  test_small_account_scan.py  test_swing_options.py  test_swing_options_debit_spread.py  test_swing_options_proxy.py  test_trade_plan.py  test_universe.py  test_watchlists.py
(+15 files in other folders)
